wip null fields fix + fix resource saving duplication + add page reload after save